--- a/pelican/charts/pelican-byol-chart/templates/pelican-web-pvc.yaml
+++ b/pelican/charts/pelican-byol-chart/templates/pelican-web-pvc.yaml
@@ -1,9 +1,13 @@
-kind: StorageClass
-apiVersion: storage.k8s.io/v1
+apiVersion: v1
+kind: PersistentVolumeClaim
 metadata:
-    name: {{ .Release.Name }}-pelican-web-pv
-reclaimPolicy: Retain
-provisioner: kubernetes.io/aws-ebs
-parameters:
-  type: gp2
-  fsType: ext4
+  name: {{ .Release.Name }}-pelican-web-pvc
+spec:
+  accessModes:
+  - ReadWriteOnce
+  storageClassName: {{ .Release.Name }}-pelican-web-pv
+  resources:
+    requests:
+      storage: {{ .Values.pelican.persistence.size }}
+  storageClassName: {{ .Values.pelican.persistence.storageClass }}
+
