pelican helm code changes

--- a/pelican/charts/pelican-byol-chart/values.yaml
+++ b/pelican/charts/pelican-byol-chart/values.yaml
@@ -27,17 +27,20 @@ pelicandb:
     annotations: {}
     type: ClusterIP
     targetPort: 3306
-  password: ""
+  password:
+    enc_passwd: AAAAEP8j9v6TWlUh4wMl0bhW4OntwJ9Km1JWbsN7Cp2FAKwr
+    root_passwd: Um9vdEAzMjEj
+    pelican_passwd: cGVsaWNhbnVzZXJAMTIz
   livenessProbe:
-    initialDelaySeconds: 30
+    initialDelaySeconds: 90
     periodSeconds: 10
     timeoutSeconds: 5
     successThreshold: 1
     failureThreshold: 3
   readinessProbe:
-    initialDelaySeconds: 5
+    initialDelaySeconds: 90
     periodSeconds: 10
-    timeoutSeconds: 1
+    timeoutSeconds: 5
     successThreshold: 1
     failureThreshold: 3
   securityContext:
